# clinical-diagnosis-extraction

./: .gitignore  Dockerfile  README.md  pyproject.toml
clinical_diagnosis_extraction/: inference.py  main.py  routers.py
clinical_diagnosis_extraction/prompts/: extract_diagnoses.txt
